--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "utreon/cielo24-php",
     "description": "The cielo24 Web Services Platform API allows developers to easily integrate transcription, captioning and keyword extraction into their applications without having to use a manual web portal.",
     "keywords": [
         "openapitools",
@@ -10,7 +11,7 @@
         "api"
     ],
     "homepage": "https://openapi-generator.tech",
-    "license": "unlicense",
+    "license": "MIT",
     "authors": [
         {
             "name": "OpenAPI-Generator contributors",
@@ -34,5 +35,10 @@
     },
     "autoload-dev": {
         "psr-4": { "Cielo24\\Test\\" : "test/" }
+    },
+    "scripts": {
+        "generate": [
+            "openapi-generator-cli generate -i https://raw.githubusercontent.com/cielo24/cielo24-openapi/master/cielo24.yml --package-name=cielo24 -g php -o . --additional-properties=invokerPackage=Cielo24"
+        ]
     }
 }
